[gd_scene load_steps=10 format=3 uid="uid://c4vv1dere8bc0"]

[ext_resource type="Script" uid="uid://4lpcaea3woer" path="res://objects/volleyball/volley_ball.gd" id="1_uvwyt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ejlre"]
bounce = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_6kpcp"]
radius = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6pspu"]
albedo_color = Color(0.5764706, 1, 0.49411765, 1)
emission_enabled = true
emission = Color(0, 0.9002212, 0.20708719, 1)

[sub_resource type="SphereMesh" id="SphereMesh_6kpcp"]
material = SubResource("StandardMaterial3D_6pspu")
radius = 0.6
height = 1.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ejlre"]

[sub_resource type="TorusMesh" id="TorusMesh_uvwyt"]
material = SubResource("StandardMaterial3D_ejlre")
inner_radius = 0.8
outer_radius = 1.2

[sub_resource type="BoxShape3D" id="BoxShape3D_c8opw"]
size = Vector3(1, 1.5, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ejlre"]
radius = 1.5

[node name="VolleyBall" type="RigidBody3D"]
collision_layer = 16
collision_mask = 19
physics_material_override = SubResource("PhysicsMaterial_ejlre")
script = ExtResource("1_uvwyt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_6kpcp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_6kpcp")

[node name="TorusIndicator" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.8956254, 0)
top_level = true
visible = false
mesh = SubResource("TorusMesh_uvwyt")

[node name="ShapeCastFloor" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_c8opw")
collision_mask = 0
debug_shape_custom_color = Color(0, 0.91764706, 0, 1)

[node name="RayCastDown" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -100, 0)
collision_mask = 16
hit_back_faces = false
collide_with_areas = true
debug_shape_custom_color = Color(0.6939626, 9.770542e-06, 0.46498328, 1)
debug_shape_thickness = 5

[node name="PickupArea" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupArea"]
shape = SubResource("SphereShape3D_ejlre")
